Fixed grid spacing issue.

--- a/src/styles/work.css
+++ b/src/styles/work.css
@@ -26,7 +26,7 @@ html,body {
 #work-partition {
   position: absolute;
     
-  top: 10rem;
+  top: 15rem;
   left: 8%;
 
   height: fit-content;
@@ -35,8 +35,8 @@ html,body {
   justify-content: center;
 
   display: grid;
-  grid-template-columns: repeat(auto-fit, 20rem);
-  grid-template-rows: repeat(auto-fit, 20rem);
+  grid-template-columns: repeat(auto-fit, 15rem);
+  grid-template-rows: repeat(auto-fit, 15rem);
 
   column-gap: 4rem;
   row-gap: 4rem;
@@ -48,5 +48,4 @@ html,body {
 .grid-item {
   align-self: center;
   display: inline-block;
-  margin: auto;
 }
